# sphinx-doc-template

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  copier.yaml  noxfile.py  package-lock.json  pyproject.toml
.github/workflows/: publish-docs.yaml  publish-to-pages.yaml
docs/: .copier-answers.yml  CHANGELOG.md  conf.py  contributing.md  features.md  index.md  noxfile.py  overview.md  package-lock.json  pyproject.toml  quickstart.md
docs/source/: conf.py  contributing.md  features.md  index.md  overview.md  quickstart.md  robots.txt  usage.md
scripts/: flat.py  with_sample.py
source/: .hidden.md  conf.py  index.md
template/: CHANGELOG.md.jinja  LICENSE.jinja  noxfile.py.jinja  package-lock.json.jinja  package.json  pyproject.toml.jinja  {% if license != "None" %}LICENSE{% endif %}.jinja
template/source/: conf.py.jinja  index.md.jinja  robots.txt.jinja
template/{% if with_sample %}with_sample{% endif %}/: index.md.jinja
tests/: .gitignore  conftest.py  test_bake.py
tests/test_bake/default__flat/: index.md
tests/test_bake/default__source/: pyproject.toml
tests/test_bake/default__source/source/: index.md
tests/test_bake/default_flat/: conf.py
tests/test_bake/default_source/: pyproject.toml
tests/test_bake/default_source/source/: conf.py
tests/test_bake/defaults/: noxfile.py  pyproject.toml
tests/test_bake/defaults/source/: conf.py
tests/test_bake/with_sample__flat/: .copier-answers.yml  conf.py  index.md  package-lock.json
tests/test_bake/with_sample__source/: .copier-answers.yml  noxfile.py
(+3 files in other folders)
