[project]
name = "sphinx-doc-template"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "copier>=9.4.1",
    "jinja2-time==0.2.0"
]
readme = "README.md"
description = "The Copier template for creating a modern Sphinx documentation project. Write in Markdown or reStructuredText, translate to multiple languages, boost with popular extensions, and enjoy automatic live reload on change."
keywords = [
    "copier",
    "project template",
    "scaffolding",
    "skeleton",
    "sphinx",
]
license = { file = "LICENSE" }
classifiers = [
    "Framework :: Sphinx",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

[dependency-groups]
dev = [
    "deep-dircmp>=0.2.0",
    "freezegun>=1.5.1",
    "nox>=2024.10.9",
    "pytest>=8.3.4",
    "pytest-datadir>=1.5.0",
]

[project.urls]
repository = "https://github.com/documatt/sphinx-doc-template"
homepage = "https://documatt.com/sphinx-doc-template"

[tool.pytest.ini_options]
# Recommended import mode for new projects
addopts = ["--import-mode=importlib"]
tmp_path_retention_policy = "none"
tmp_path_retention_count = 0